apps/base/homepage/https-redirect-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: homepage
spec:
  redirectScheme:
    scheme: https
    permanent: true
